Disabled mouse tests for now, added libraries to Scons script

--- a/tests/SConscript
+++ b/tests/SConscript
@@ -2,6 +2,6 @@ Import('*')
 
 INC = [ '#/vm/inc', '#/system/kiosk']
 
-LIBS = [ 'libminiat', 'libkiosk_sdl', "SDL2", "libSDL2_image"]
+LIBS = [ 'libminiat', 'libkiosk_sdl', "SDL2", "libSDL2_image", "libSDL2_ttf", "libSDL2_gfx"]
 
 buildProgram("sdl_test", "sdl_tests.c", CPPPATH=INC, LIBS=LIBS)
