--- a/tests/SConscript
+++ b/tests/SConscript
@@ -5,3 +5,4 @@ INC = [ '#/vm/inc', '#/system/kiosk']
 LIBS = [ 'libminiat', 'libkiosk_sdl', "SDL2", "libSDL2_image", "libSDL2_ttf", "libSDL2_gfx"]
 
 buildProgram("sdl_test", "sdl_tests.c", CPPPATH=INC, LIBS=LIBS)
+buildProgram("sdl_demo", "sdl_demo.c", CPPPATH=INC, LIBS=LIBS)
