--- a/asm/SConscript
+++ b/asm/SConscript
@@ -4,4 +4,5 @@ buildMash('test_screen.asm')
 buildMash('test_screen_char.asm') 
 buildMash('test_screen_move.asm') 
 buildMash('test_screen_color.asm') 
-
+buildMash('test_screen_draw.asm') 
+buildMash('test_screen_draw2.asm') 
