- changed sceen_test.c to print out hex value of address instead of decimal - added 2 more test asm files demonstrating use of addresses

--- a/asm/SConscript
+++ b/asm/SConscript
@@ -6,3 +6,6 @@ buildMash('test_screen_move.asm')
 buildMash('test_screen_color.asm') 
 buildMash('test_screen_draw.asm') 
 buildMash('test_screen_draw2.asm') 
+buildMash('test_screen_string.asm')
+buildMash('test_screen_string2.asm')
+buildMash('test_screen_string3.asm')
