- added address 0x401E WAIT function - added asm that demonstrates the WAIT function use

--- a/asm/SConscript
+++ b/asm/SConscript
@@ -9,3 +9,4 @@ buildMash('test_screen_draw2.asm')
 buildMash('test_screen_string.asm')
 buildMash('test_screen_string2.asm')
 buildMash('test_screen_string3.asm')
+buildMash('test_screen_string_wait.asm')
