--- a/asm/SConscript
+++ b/asm/SConscript
@@ -10,3 +10,4 @@ buildMash('test_screen_string.asm')
 buildMash('test_screen_string2.asm')
 buildMash('test_screen_string3.asm')
 buildMash('test_screen_string_wait.asm')
+buildMash('test_keypad_1.asm')
