--- a/tests/SConscript
+++ b/tests/SConscript
@@ -2,9 +2,11 @@ Import('*')
 
 INC = [ '#/vm/inc', '#/system/kiosk']
 
-LIBS = [ 'libminiat', 'libkiosk_sdl', "SDL2", "libSDL2_image", "libSDL2_ttf", "libSDL2_gfx", "libkiosk_screen", 'libkiosk_keypad']
+LIBS = [ 'libminiat', 'libkiosk_sdl', "SDL2", "libSDL2_image", "libSDL2_ttf", "libSDL2_gfx", "libkiosk_screen", 'libkiosk_keypad', 'libkiosk_print_screen']
  
 buildProgram("sdl_test", "sdl_tests.c", CPPPATH=INC, LIBS=LIBS)
 buildProgram("sdl_demo", "sdl_demo.c", CPPPATH=INC, LIBS=LIBS)
 buildProgram("test_screen", "test_screen.c", CPPPATH=INC, LIBS=LIBS)
 buildProgram("test_both", "test_both.c", CPPPATH=INC, LIBS=LIBS)
+buildProgram("test_keypad", "test_keypad.c", CPPPATH=INC, LIBS=LIBS)
+buildProgram("test_all", "test_all.c", CPPPATH=INC, LIBS=LIBS)
