--- a/asm/SConscript
+++ b/asm/SConscript
@@ -11,3 +11,9 @@ buildMash('test_screen_string2.asm')
 buildMash('test_screen_string3.asm')
 buildMash('test_screen_string_wait.asm')
 buildMash('test_keypad_1.asm')
+buildMash('keypad_test.asm')
+buildMash('test_printer_1.asm')
+buildMash('test_printer_2.asm')
+buildMash('test_all.asm')
+buildMash('test_draw_screen.asm')
+buildMash('test_printer_3.asm')
